--- a/public/index.html
+++ b/public/index.html
@@ -98,9 +98,8 @@ and nine newspaper clippings</p>
   <footer>
     <p>
   &copy; Copyright 2026 &middot;
-  <a href="https://github.com/ntk148v/shibui">shibui</a>
+  <a href="https://github.com/anthonycastaneda">Anthony Castañeda</a>
 </p>
-
   </footer>
 </body>
 </html>
